--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-          <h1 class="banner-title">
+          <h1 class="banner-tittle">
             All Thinks Are <br />
             Possible If You <br />
             believe
           </h1>
-          <p class="banner-desc">
+          <p class="banner-description">
             GOOD THINGS COME TO THOSE WHO BELIEVE. BETTER THINGS COME TO THOSE
             WHO ARE PATIENT. AND THE BEST THINGS COME TO THOSE WHO DON'T GIVE
             UP.
