--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>First Assignment</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/png" href="images/icons/fab-icon.png" />
-    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
   </head>
   <body>
@@ -45,7 +43,7 @@
           <img src="images/person.png" alt="" />
         </div>
         <div class="failures-content">
-          <h3 class="section-title">
+          <h3 class="section-tittle">
             My failures of <br />
             Previous year
           </h3>
