--- a/index.html
+++ b/index.html
@@ -47,32 +47,29 @@
             My failures of <br />
             Previous year
           </h3>
-          <p class="section-desc">
+          <p class="section-description">
             "It is impossible to live without failing at something unless you
             live so cautiously that you might as well not have lived at all, in
             which case you have failed by default."― J.K Rowling
-            <span class="text-secondary">Reasons for failure:</span>
+            <span class="text-failure">Reasons for failure:</span>
           </p>
 
           <ul class="failure-reasons-container">
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>People don't believe they can be
-              successful in their lives.
+              <i class="fa-solid fa-check"></i>Lack of Communication.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>Lack of perseverance and
-              consistent efforts.
+              <i class="fa-solid fa-check"></i>Lack of Vision.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>If they are unable to connect and
-              build strong relationships.
+              <i class="fa-solid fa-check"></i>Not learning from past mistakes.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>If they are unable to connect and
-              build strong relationships.
+              <i class="fa-solid fa-check"></i>A lack of business goals
+              overview.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>Lack of vision.
+              <i class="fa-solid fa-check"></i>Lack of employee involvement.
             </li>
           </ul>
         </div>
@@ -80,17 +77,17 @@
       <!-- Start Second Section -->
 
       <section id="plans">
-        <h3 class="section-title">My Plans</h3>
+        <h3 class="section-tittle">My Plans</h3>
         <div class="plans-container">
           <div class="plan">
             <img src="images/icons/web.png" alt="web-image" class="plan-img" />
-            <h4 class="plan-title">Web Development</h4>
-            <p class="plan-desc">I want to start</p>
+            <h4 class="plan-tittle">Web Development</h4>
+            <p class="plan-description">I want to start</p>
           </div>
           <div class="plan">
             <img src="images/icons/js.png" alt="js-image" class="plan-img" />
-            <h4 class="plan-title">Javascript</h4>
-            <p class="plan-desc">I want to learn</p>
+            <h4 class="plan-tittle">Javascript</h4>
+            <p class="plan-description">I want to learn</p>
           </div>
           <div class="plan">
             <img
@@ -98,8 +95,8 @@
               alt="smoke-image"
               class="plan-img"
             />
-            <h4 class="plan-title">Smoking Habit</h4>
-            <p class="plan-desc">I want to end</p>
+            <h4 class="plan-tittle">Smoking Habit</h4>
+            <p class="plan-description">I want to end</p>
           </div>
           <div class="plan">
             <img
@@ -108,14 +105,14 @@
               class="plan-img"
             />
             <h4 class="plan-title">E-commerce</h4>
-            <p class="plan-desc">I want to develop</p>
+            <p class="plan-description">I want to develop</p>
           </div>
         </div>
       </section>
       <!-- Start Third Section -->
 
       <section id="blog">
-        <h3 class="section-title">Learn From Mistakes</h3>
+        <h3 class="section-tittle">Learn From Mistakes</h3>
         <div class="blogs-container">
           <div class="blog-item">
             <h4 class="blog-title">Expectations</h4>
