--- a/index.html
+++ b/index.html
@@ -80,31 +80,23 @@
         <h3 class="section-tittle">My Plans</h3>
         <div class="plans-container">
           <div class="plan">
-            <img src="images/icons/web.png" alt="web-image" class="plan-img" />
+            <img src="images/icons/coding.png" alt="" />
             <h4 class="plan-tittle">Web Development</h4>
             <p class="plan-description">I want to start</p>
           </div>
           <div class="plan">
-            <img src="images/icons/js.png" alt="js-image" class="plan-img" />
+            <img src="images/icons/javascript.png" alt="" />
             <h4 class="plan-tittle">Javascript</h4>
             <p class="plan-description">I want to learn</p>
           </div>
           <div class="plan">
-            <img
-              src="images/icons/smoke.png"
-              alt="smoke-image"
-              class="plan-img"
-            />
-            <h4 class="plan-tittle">Smoking Habit</h4>
+            <img src="images/icons/movie.png" alt="" />
+            <h4 class="plan-tittle">Watching Movies</h4>
             <p class="plan-description">I want to end</p>
           </div>
           <div class="plan">
-            <img
-              src="images/icons/ecom.png"
-              alt="ecommerce-image"
-              class="plan-img"
-            />
-            <h4 class="plan-title">E-commerce</h4>
+            <img src="images/icons/shopping.png" alt="" />
+            <h4 class="plan-tittle">E-Commerce</h4>
             <p class="plan-description">I want to develop</p>
           </div>
         </div>
@@ -115,7 +107,7 @@
         <h3 class="section-tittle">Learn From Mistakes</h3>
         <div class="blogs-container">
           <div class="blog-item">
-            <h4 class="blog-title">Expectations</h4>
+            <h4 class="blog-tittle">Expectations</h4>
             <ul class="items-container">
               <li><i class="fa-solid fa-check"></i>Reflect on the situation</li>
               <li>
@@ -150,7 +142,7 @@
       <!-- Start Fourth Section -->
 
       <section id="contact-us">
-        <h3 class="section-title contact-us-title">
+        <h3 class="section-tittle contact-us-tittle">
           Always keep a positive <br />
           mindset
         </h3>
