--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- Start Second Section -->
 
       <section id="plans">
-        <h3 class="section-tittle">My Plans</h3>
+        <h3 class="section-tittle">2023 GOAL</h3>
         <div class="plans-container">
           <div class="plan">
             <img src="images/icons/coding.png" alt="" />
@@ -142,7 +142,7 @@
       <!-- Start Fourth Section -->
 
       <section id="contact-us">
-        <h3 class="section-tittle contact-us-tittle">
+        <h3 class="fourth-tittle contact-us-tittle">
           Always keep a positive <br />
           mindset
         </h3>
