--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
       </section>
       <!-- Start Second Section -->
 
-      <section id="plans">
+      <section id="goal ">
         <h3 class="section-tittle">2023 GOAL</h3>
-        <div class="plans-container">
-          <div class="plan">
+        <div class="goals-container">
+          <div class="goal">
             <img src="images/icons/coding.png" alt="" />
-            <h4 class="plan-tittle">Web Development</h4>
-            <p class="plan-description">I want to start</p>
+            <h4 class="goal-tittle">Web Development</h4>
+            <p class="goal-description">I want to start</p>
           </div>
-          <div class="plan">
+          <div class="goal">
             <img src="images/icons/javascript.png" alt="" />
-            <h4 class="plan-tittle">Javascript</h4>
-            <p class="plan-description">I want to learn</p>
+            <h4 class="goal-tittle">Javascript</h4>
+            <p class="goal-description">I want to learn</p>
           </div>
-          <div class="plan">
+          <div class="goal">
             <img src="images/icons/movie.png" alt="" />
-            <h4 class="plan-tittle">Watching Movies</h4>
-            <p class="plan-description">I want to end</p>
+            <h4 class="goal-tittle">Watching Movies</h4>
+            <p class="goal-description">I want to end</p>
           </div>
-          <div class="plan">
+          <div class="goal">
             <img src="images/icons/shopping.png" alt="" />
-            <h4 class="plan-tittle">E-Commerce</h4>
-            <p class="plan-description">I want to develop</p>
+            <h4 class="goal-tittle">E-Commerce</h4>
+            <p class="goal-description">I want to develop</p>
           </div>
         </div>
       </section>
@@ -128,7 +128,7 @@
           <p class="blog-center-text">VS</p>
 
           <div class="blog-item">
-            <h4 class="blog-title">Reality</h4>
+            <h4 class="blog-tittle">Reality</h4>
             <ul class="items-container items-container2">
               <li><i class="fa-solid fa-xmark"></i>Lack of fixed mindset</li>
               <li><i class="fa-solid fa-xmark"></i>A lack of self-awareness</li>
@@ -154,15 +154,19 @@
     <footer id="footer">
       <div class="info-container">
         <div class="info-details">
-          <h3 class="section-title footer-title">Future</h3>
-          <p class="section-desc footer-desc">
+          <h3 class="section-tittle footer-tittle">Future</h3>
+          <p class="section-desc footer-description">
             Make Your Future is a valued opportunity presented to youth. It is a
             career fair to show attendees available pathways to various careers
             in high demand. "people do not decide their futures, they decide
             their habits and their habits decide their futures".
           </p>
-          <p class="section-desc footer-desc">Email : shaninh12@gmail.com</p>
-          <p class="section-desc footer-desc">Phone : 015 *** *** **</p>
+          <p class="section-description footer-description">
+            Email : shaninh12@gmail.com
+          </p>
+          <p class="section-description footer-description">
+            Phone : 015 *** *** **
+          </p>
           <div class="social-links">
             <img src="images/icons/fb.png" alt="facebook-icon" />
             <img src="images/icons/twitter.png" alt="twitter-icon" />
