--- a/index.html
+++ b/index.html
@@ -56,27 +56,29 @@
 
           <ul class="failure-reasons-container">
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>Lack of Communication.
+              <i class="fa-solid fa-circle-check"></i>Lack of Communication.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>Lack of Vision.
+              <i class="fa-solid fa-circle-check"></i>Lack of Vision.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>Not learning from past mistakes.
+              <i class="fa-solid fa-circle-check"></i>Not learning from past
+              mistakes.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>A lack of business goals
+              <i class="fa-solid fa-circle-check"></i>A lack of business goals
               overview.
             </li>
             <li class="failure-reason">
-              <i class="fa-solid fa-check"></i>Lack of employee involvement.
+              <i class="fa-solid fa-circle-check"></i>Lack of employee
+              involvement.
             </li>
           </ul>
         </div>
       </section>
       <!-- Start Second Section -->
 
-      <section id="goal ">
+      <section id="goals">
         <h3 class="section-tittle">2023 GOAL</h3>
         <div class="goals-container">
           <div class="goal">
@@ -103,38 +105,32 @@
       </section>
       <!-- Start Third Section -->
 
-      <section id="blog">
-        <h3 class="section-tittle">Learn From Mistakes</h3>
-        <div class="blogs-container">
-          <div class="blog-item">
-            <h4 class="blog-tittle">Expectations</h4>
+      <section id="avoid">
+        <h3 class="section-tittle">Avoid This Mistakes</h3>
+        <div class="avoid-container">
+          <div class="avoid-item">
+            <h4 class="avoid-tittle">List of Subject</h4>
             <ul class="items-container">
-              <li><i class="fa-solid fa-check"></i>Reflect on the situation</li>
               <li>
-                <i class="fa-solid fa-check"></i>Identify the reasons for the
-                gap
+                <i class="fa-solid fa-circle-check"></i>Reflect on the
+                situation.
               </li>
               <li>
-                <i class="fa-solid fa-check"></i>Consider the consequences
+                <i class="fa-solid fa-circle-check"></i>Identify the reasons for
+                the gap.
               </li>
               <li>
-                <i class="fa-solid fa-check"></i>Determine what you can learn
+                <i class="fa-solid fa-circle-check"></i>Consider the
+                consequences.
               </li>
               <li>
-                <i class="fa-solid fa-check"></i>Make a plan for the future
+                <i class="fa-solid fa-circle-check"></i>Determine what you can
+                learn.
               </li>
-            </ul>
-          </div>
-          <p class="blog-center-text">VS</p>
-
-          <div class="blog-item">
-            <h4 class="blog-tittle">Reality</h4>
-            <ul class="items-container items-container2">
-              <li><i class="fa-solid fa-xmark"></i>Lack of fixed mindset</li>
-              <li><i class="fa-solid fa-xmark"></i>A lack of self-awareness</li>
-              <li><i class="fa-solid fa-xmark"></i>A lack of accountability</li>
-              <li><i class="fa-solid fa-xmark"></i>A lack of support</li>
-              <li><i class="fa-solid fa-xmark"></i>Emotional reactions</li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i>Make a plan for the
+                future.
+              </li>
             </ul>
           </div>
         </div>
