--- a/index.html
+++ b/index.html
@@ -111,25 +111,20 @@
           <div class="avoid-item">
             <h4 class="avoid-tittle">List of Subject</h4>
             <ul class="items-container">
+              <li><i class="fa-solid fa-circle-check"></i>Waste of time</li>
               <li>
-                <i class="fa-solid fa-circle-check"></i>Reflect on the
-                situation.
+                <i class="fa-solid fa-circle-check"></i>Take care of my health.
               </li>
               <li>
-                <i class="fa-solid fa-circle-check"></i>Identify the reasons for
-                the gap.
+                <i class="fa-solid fa-circle-check"></i>Giving enough time to
+                family,
               </li>
               <li>
-                <i class="fa-solid fa-circle-check"></i>Consider the
-                consequences.
+                <i class="fa-solid fa-circle-check"></i>Taking on new
+                challenges.
               </li>
               <li>
-                <i class="fa-solid fa-circle-check"></i>Determine what you can
-                learn.
-              </li>
-              <li>
-                <i class="fa-solid fa-circle-check"></i>Make a plan for the
-                future.
+                <i class="fa-solid fa-circle-check"></i>Saving money for future.
               </li>
             </ul>
           </div>
