--- a/index.html
+++ b/index.html
@@ -105,31 +105,6 @@
       </section>
       <!-- Start Third Section -->
 
-      <section id="avoid">
-        <h3 class="section-tittle">Avoid This Mistakes</h3>
-        <div class="avoid-container">
-          <div class="avoid-item">
-            <h4 class="avoid-tittle">List of Subject</h4>
-            <ul class="items-container">
-              <li><i class="fa-solid fa-circle-check"></i>Waste of time</li>
-              <li>
-                <i class="fa-solid fa-circle-check"></i>Take care of my health.
-              </li>
-              <li>
-                <i class="fa-solid fa-circle-check"></i>Giving enough time to
-                family,
-              </li>
-              <li>
-                <i class="fa-solid fa-circle-check"></i>Taking on new
-                challenges.
-              </li>
-              <li>
-                <i class="fa-solid fa-circle-check"></i>Saving money for future.
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
       <!-- Start Fourth Section -->
 
       <section id="contact-us">
@@ -146,22 +121,21 @@
       <div class="info-container">
         <div class="info-details">
           <h3 class="section-tittle footer-tittle">Future</h3>
-          <p class="section-desc footer-description">
-            Make Your Future is a valued opportunity presented to youth. It is a
-            career fair to show attendees available pathways to various careers
-            in high demand. "people do not decide their futures, they decide
-            their habits and their habits decide their futures".
+          <p class="section-description footer-description">
+            “Do not let the memories of your past limit the potential of your
+            future. There are no limits to what you can achieve on your journey
+            through life, except in your mind.”
           </p>
           <p class="section-description footer-description">
-            Email : shaninh12@gmail.com
+            Email : abdulazizsu44@gmail.com
           </p>
           <p class="section-description footer-description">
-            Phone : 015 *** *** **
+            Phone : +8801234567890
           </p>
           <div class="social-links">
-            <img src="images/icons/fb.png" alt="facebook-icon" />
-            <img src="images/icons/twitter.png" alt="twitter-icon" />
-            <img src="images/icons/youtube.png" alt="youtube-icon" />
+            <img src="images/icons/fb.png" alt="" />
+            <img src="images/icons/twitter.png" alt="" />
+            <img src="images/icons/youtube.png" alt="" />
           </div>
         </div>
         <div class="info-mail">
