--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </header>
+
     <!-- Start First Section -->
 
     <main>
@@ -76,6 +77,7 @@
           </ul>
         </div>
       </section>
+
       <!-- Start Second Section -->
 
       <section id="goals">
@@ -103,7 +105,6 @@
           </div>
         </div>
       </section>
-      <!-- Start Third Section -->
 
       <!-- Start Fourth Section -->
 
@@ -115,6 +116,7 @@
         <button class="btn-secondary">Call Now</button>
       </section>
     </main>
+
     <!-- Start last section -->
 
     <footer id="footer">
@@ -133,9 +135,9 @@
             Phone : +8801234567890
           </p>
           <div class="social-links">
-            <img src="images/icons/fb.png" alt="" />
+            <img src="images/icons/facebook.png" alt="" />
             <img src="images/icons/twitter.png" alt="" />
-            <img src="images/icons/youtube.png" alt="" />
+            <img src="images/icons/whatsapp.png" alt="" />
           </div>
         </div>
         <div class="info-mail">
