--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
       <section id="failures">
         <div class="failures-img">
-          <img src="images/person.png" alt="" />
+          <img src="images/women.png" alt="" />
         </div>
         <div class="failures-content">
           <h3 class="section-tittle">
